traces/bug_270.txt
examples++-load/ClosePoints.cpp:227: error: DEAD_STORE
  The value written to &Qn0 (type long) is never used.
Showing all 1 steps of the trace


examples++-load/ClosePoints.cpp:227:5: Write of unused value
225.       long Pn0=P.N();
226.       long Pm0=P.M();
227.       long Qn0=Q.N();
           ^
228.       long Qm0=Q.M();
229.       double * p0=&(P(0,0));
